[package]
name = "irc-server"
version = "0.1.0"
authors = ["Caleb Boylan <calebboylan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
regex = "1.4"
futures = "0.3"
